# MSc_Project

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
ck_fridge_sim/: base_model_classes.py  equipment_models.py  process_model.py  process_states.py
ck_fridge_sim/control/: configuration.py  control_base.py  control_system.py  controllers.py
ck_fridge_sim/process_equipment_models/: compressor_model.py  condenser_model.py  evaporator_model.py  flow_splitter_model.py  pump_model.py  refrigeration_model.py  valve_model.py  vessel_model.py
ck_fridge_sim/simulator/: example.py
ck_fridge_sim/solver/: dynamic_simulation.py  solvers.py
ck_fridge_sim/sources/: sources.py
ck_fridge_sim/thermo_tools/: ammonia_thermo.py  humid_air_properties.py  single_fluid_thermo.py  thermo_constants.py  unit_conversions.py
ck_fridge_sim/thermo_tools/equations_of_state/: cool_prop_rks.py  cp_corrected_ammonia.py  equation_of_state_base.py
ck_fridge_sim/thermo_tools/thermo_processes/: __init__.py  irreversible_compression.py  isentropic_pressure_change.py  thermo_process_base.py
datasets/: 20240715_CAISO_Average_Price.csv
newVirtualEnv/: pyvenv.cfg
notebooks/: run_simulator.ipynb  training.py  training_loading_model.py
notebooks/results/data_DDPG/: air_temp__f.csv  (+1 more)
notebooks/simulation_payload/: control_states.json  initial_control_states.json  local_compressor_controller_config.yaml  process_states.json  simple_control_config.yaml  simple_flowsheet_config.json
reinforcement_learning/: normaliser.py  pricer.py  refrigeration_env.py
(+68 files in other folders)
